mule-user-guide/v/3.3/rss-module-reference.adoc
= RSS Module Reference

The Mule RSS support makes it possible to integrate easily with RSS feeds via the http://java.net/projects/rome/pages/Home[Rome] project.

== Consuming Feeds

One of the most common patterns is for integrating with RSS is polling for feed updates. With Mule this can be done easily. You must first write your class which receives an RSS Syndication Entry:

[%header,cols="1*a"]
|===
^|*EntryReceiver.java*
|
[source, java, linenums]
----
package org.mule.module.rss;

import com.sun.syndication.feed.synd.SyndEntry;

public class EntryReceiver
{
    public void readEntry(@Payload SyndEntry entry) throws Exception
    {
        //do stuff
    }
}
----
|===

By default the RSS feed will be split into entries for you, so for each entry the component method will be invoked with the next entry in the feed. The flow configuration would look like:

Flow configuration:

[source, xml, linenums]
----
<flow name="eventConsumer">
    <rss:inbound-endpoint address="http://localhost:9002/events"/>
    <component class="org.mule.module.rss.EntryReceiver"/>
</flow>
----

== ETags

The Atom Http endpoint respects ETags and the 304 Not Modified response code by default, so you don't need to worry about consuming unnecessary updates.

=== Accessing the Feed itself

If you want access to the feed itself, it is available via a header on the current message called 'feed.object'. You could have this injected into your entry point method using annotations -


[%header,cols="1*a"]
|===
^|*EntryReceiver.java*
|
[source, java, linenums]
----
public void processEntry(@Payload Entry entry, @Expr("#[header:invocation:feed.object]") Feed feed) throws Exception
----
|===

[TIP]
The @Expr annotation is only available in the http://www.mulesoft.org/download-mule-esb-community-edition[Mule Community Edition].

If you want to process the Feed in its entirety (not have it split into Entry objects) you can set the the following flag on the endpoint:

[source, xml, linenums]
----
<rss:inbound-endpoint address="http://localhost:9002/events" splitFeed="false/>
----

Now your component will only be invoked once for each feed change no matter how many entries were added or updated. The method on you component should expect a `com.sun.syndication.feed.synd.SyndFeed` object or just a `org.w3c.dom.Document` if you want to process the XML model or even an `java.io.InputStream` or `java.lang.String` to get a raw representation.

[%header,cols="1*a"]
|===
^|*FeedReceiver.java*
|
[source, java, linenums]
----
public void processFeed(@Payload SyndFeed feed) throws Exception
{
    //do stuff
}
----
|===

== Mixing HTTP and RSS endpoints

The `rss:endpoint` elements are a shortcut for creating a polling HTTP endpoint and splitting a feed. If you are using another non-polling HTTP endpoint in your configuration, configure a HTTP polling endpoint as well and reference it on your Atom endpoint.

[source, xml, linenums]
----
<http:connector name="HttpConnector"/>
 
<http:polling-connector name="PollingHttpConnector" pollingFrequency="1000" discardEmptyContent="false"/>
 
<flow name="eventConsumer">
    <http:inbound-endpoint address="http://localhost:9002/events" connector-ref="PollingHttpConnector"/>
    <component class="org.mule.module.rss.EntryReceiver"/>
</flow>
----

== Accessing feeds over other Protocols

You can process feeds and process them using other Mule connectors such as JMS, File or XMPP. To do this the atom feed needs to be served over the connector, i.e. an rss document is sent over JMS or polled from a file. The rss schema defines a `<rss:feed-splitter/>` that can split messages received from an endpoint.

=== Over JMS

[source, xml, linenums]
----
<flow name="feedSplitterConsumer">
    <jms:inbound-endpoint queue="feed.in">
        <rss:feed-splitter/>
    </jms:inbound-endpoint>
 
    <component class="org.mule.module.atom.event.EntryReceiver"/>
</flow>
----

=== Over File

[source, xml, linenums]
----
<flow name="feedSplitterConsumer">
    <file:inbound-endpoint  path="${mule.working.dir}" pollingFrequency="1000" >
        <file:filename-wildcard-filter pattern="*.rss"/>
        <rss:feed-splitter/>
    </file:inbound-endpoint>
 
    <component class="org.mule.module.atom.event.EntryReceiver"/>
</flow>
----

=== Processing Feeds Without the RSS endpoint

For reference the follow example shows the explicit configuration for reading an Atom feed without using the `rss:endpoint`.

[source, xml, linenums]
----
<http:polling-connector name="PollingHttpConnector" pollingFrequency="1000" discardEmptyContent="false"/>
 
<flow name="feedConsumer">
    <http:inbound-endpoint address="http://rossmason.blogspot.com/feeds/posts/default" connector-ref="PollingHttpConnector">
        <rss:feed-splitter/>
        <rss:entry-last-updated-filter/>           
    </http:inbound-endpoint>
 
    <component class="org.mule.module.rss.EntryReceiver"/>
</flow>
----

*Note*: The `rss:entry-last-updated-filter` should come after the `<rss:feed-splitter/>` since you need to split the feeds so that the filter can process them. Also note that we do not set a `lastUpdate` date on the filter which implies the default behaviour that all available entries will be read and then only new entries since the last read will be processed.

== Configuration options

= RSS Module

RSS is a popular syndication format used by many websites to provide a feed of data such as news or updates.

=== Transformers

These are transformers specific to this transport. Note that these are added automatically to the Mule registry at start up. When doing automatic transformations these will be included when searching for the correct transformers.

[%header,cols="2*"]
|===
|Name |Description
|object-to-feed-transformer |Transforms the payload of the message to a `com.sun.syndication.feed.synd.SyndFeed` instance.
|===

=== Filters

Filters can be used to control which data is allowed to continue in the flow.

[%header,cols="2*"]
|===
|Name |Description
|entry-last-updated-filter |Will filter RSS entry objects based on their last update date. This is useful for filtering older entries from the feed. This filter works only on RSS SyndEntry objects not SyndFeed objects.
|feed-last-updated-filter |Will filter the whole RSS Feed based on its last update date. This is useful for processing a feed that has not been updated since a specific date. This filter works only on RSS SyndFeed objects.
|===

== Feed splitter

Will split the entries of a feed into single entry objects. Each entry will be a separate message in Mule.

=== Child Elements of <feed-splitter...>

[%header,cols="34,33,33"]
|===
|Name |Cardinality |Description
|===
